crates/solidity-v2/testing/snapshots/cst_output/YulStatement/var_assign_colon_and_equals/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected UNRECOGNIZED. One of YulBreakKeyword_Reserved, YulCloseBrace, YulColonEqual, YulComma, YulContinueKeyword_Reserved, YulDecimalLiteral, YulDoubleQuotedHexStringLiteral, YulDoubleQuotedStringLiteral, YulFalseKeyword_Reserved, YulForKeyword_Reserved, YulFunctionKeyword_Reserved, YulHexLiteral, YulIdentifier, YulIfKeyword_Reserved, YulLeaveKeyword_Reserved, YulLetKeyword_Reserved, YulOpenBrace, YulOpenParen, YulPeriod, YulSingleQuotedHexStringLiteral, YulSingleQuotedStringLiteral, YulSwitchKeyword_Reserved, YulTrueKeyword_Reserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/YulStatement/var_assign_colon_and_equals/input.sol:6:5]
   │
 6 │ newB: = mload(0x80)
   │     ┬  
   │     ╰── Error occurred here.
───╯
